font is not responsive in small device | not fixed yet

--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -478,6 +478,16 @@ div.experience-skill-container-indent {
     flex-direction: column;
   }
 
+  .training {
+    display: flex;
+    flex-direction: column;
+  }
+  .custom-experience-title {
+    /* position: absolute; */
+    /* width: fit-content;
+    height: fit-content; */
+  }
+
   div.capsule {
   }
 
